Changed About Me profile picture

--- a/public/modules/about-me/views/about-me.client.view.html
+++ b/public/modules/about-me/views/about-me.client.view.html
@@ -2,7 +2,8 @@
 
 	<div class="row">
 		<div class="col-md-4"><p></p>
-			<p><img ng-src="modules/core/img/edna.jpg" class="edna2"></p>
+			<p><img data-ng-src="{{aboutme}}" class="edna2"></p>
+			<!--<img class="pCarouselImg" data-ng-src="{{mainAlbumDir + '/' + albumgroupName + '/' + albumName + '/' + slide.filename}}" style="margin:auto;">-->
 		</div>
 
 		<!--<div class="col-md-4">-->
