--- a/public/modules/pictures/views/list-pictures.client.view.html
+++ b/public/modules/pictures/views/list-pictures.client.view.html
@@ -12,8 +12,8 @@
             <tr>
                 <th st-sort="name">Description</th>
                 <th st-sort="albumgroupName">Group</th>
-                <th st-sort="album.name">Album</th>
-                <th>Preview</th>
+                <!--<th st-sort="album.name">Album</th>-->
+                <!--<th>Preview</th>-->
                 <th></th>
                 <th></th>
             </tr>
@@ -23,7 +23,8 @@
                 <td>{{picture.name}}</td>
                 <!--<td>{{albumgroupName}}</td>-->
                 <!--<td>{{picture.album.name}}</td>-->
-                <td>{{initImg(picture.album.albumgroup)}}</td>
+                <td>{{picture.album.albumgroup}}</td>
+                <!--<td>{{initImg(picture.album.albumgroup)}}</td>-->
                 <!--<td><img  src="modules/core/img/photoalbums/{{albumgroupName}}/{{picture.album.name}}/{{picture.filename}}" class="thumb-sm"/></td>-->
 
                 <td><a class="btn btn-info btn-sm" href="/#!/pictures/{{picture._id}}/edit"><i class="glyphicon glyphicon-edit"></i></td></a>
