--- a/public/modules/app-setups/views/edit-app-setup.client.view.html
+++ b/public/modules/app-setups/views/edit-app-setup.client.view.html
@@ -17,12 +17,25 @@
                         <input type="text" data-ng-model="appSetup.description" id="description" class="form-control" placeholder="Description">
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="value">Value</label>
-                    <div class="controls">
-                        <input type="text" data-ng-model="appSetup.value" id="value" class="form-control" placeholder="Value" required>
-                    </div>
-                </div>
+
+                <div my-value></div>
+                <div my-dir></div>
+
+                <!--<div class="form-group" ng-show="appSetup.name == 'Main Album Directory'">-->
+                    <!--<label class="control-label" for="value">Value</label>-->
+                    <!--<div class="controls">-->
+                        <!--<input type="text" data-ng-model="appSetup.value" id="value" class="form-control" placeholder="Value" required>-->
+                    <!--</div>-->
+                <!--</div>-->
+<!---->
+                <!--<div class="form-group" ng-show="appSetup.name == 'Carousel Album'">-->
+                    <!--<label class="control-label" for="value">Album</label>-->
+                    <!--<div class="controls">-->
+                        <!--<select id="value" class="form-control" ng-options="album._id as album.name for album in albums | orderBy:'name'" ng-model="appSetup.value"></select>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+
                 <div class="form-group">
                     <input type="submit" value="Update" class="btn btn-default">
                 </div>
