Add functionality to create/edit/delete of physical directory when creating/editing/deleting albumgroup and album in UI

--- a/public/modules/albums/views/create-album.client.view.html
+++ b/public/modules/albums/views/create-album.client.view.html
@@ -12,7 +12,7 @@
                     </div>
                     <label class="control-label" for="thumbnail">Thumbnail</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="thumbnail" id="thumbnail" class="form-control" placeholder="Thumbnail" required>
+                        <input type="text" data-ng-model="thumbnail" id="thumbnail" class="form-control" placeholder="Thumbnail">
                     </div>
                     <label class="control-label" for="albumgroup">Album Group</label>
                     <div class="controls">
