--- a/public/modules/app-setups/views/edit-app-setup.client.view.html
+++ b/public/modules/app-setups/views/edit-app-setup.client.view.html
@@ -2,7 +2,7 @@
     <div class="page-header">
         <h1>Edit App setup</h1>
     </div>
-    <div class="col-md-12">
+    <my-value class="col-md-12">
         <form class="form-horizontal" data-ng-submit="update()" novalidate>
             <fieldset>
                 <div class="form-group">
@@ -18,22 +18,26 @@
                     </div>
                 </div>
 
-                <div my-value></div>
+                <div class="form-group" ng-show="appSetup.name == 'Main Album Directory'">
+                    <label class="control-label" for="value">Value</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="appSetup.value" id="value" class="form-control" placeholder="Value" required>
+                    </div>
+                </div>
+
+                <div class="form-group" ng-show="appSetup.name == 'Carousel Album'">
+                    <label class="control-label" for="value">Album</label>
+                    <div class="controls">
+                        <select id="value" class="form-control" ng-options="album._id as album.name for album in albums | orderBy:'name'" ng-model="appSetup.value"></select>
+                    </div>
+                </div>
+
+
+
+                <!--Custom Directives-->
+                <div my-value xname="appSetup.name" xalbum="albums"></div>
                 <div my-dir></div>
 
-                <!--<div class="form-group" ng-show="appSetup.name == 'Main Album Directory'">-->
-                    <!--<label class="control-label" for="value">Value</label>-->
-                    <!--<div class="controls">-->
-                        <!--<input type="text" data-ng-model="appSetup.value" id="value" class="form-control" placeholder="Value" required>-->
-                    <!--</div>-->
-                <!--</div>-->
-<!---->
-                <!--<div class="form-group" ng-show="appSetup.name == 'Carousel Album'">-->
-                    <!--<label class="control-label" for="value">Album</label>-->
-                    <!--<div class="controls">-->
-                        <!--<select id="value" class="form-control" ng-options="album._id as album.name for album in albums | orderBy:'name'" ng-model="appSetup.value"></select>-->
-                    <!--</div>-->
-                <!--</div>-->
 
 
                 <div class="form-group">
