--- a/public/modules/app-setups/views/entry-value-Carousel Album.client.view.html
+++ b/public/modules/app-setups/views/entry-value-Carousel Album.client.view.html
@@ -1,6 +1,6 @@
 <div class="form-group">
-	<label class="control-label" for="value">Album</label>
+	<label class="control-label" for="value">{{xName}}</label>
 	<div class="controls">
-		<select id="value" class="form-control" ng-options="album._id as album.name for album in albums | orderBy:'name'" ng-model="appSetup.value"></select>
+		<select id="value" class="form-control" ng-options="album._id as album.name for album in xAlbums | orderBy:'name'" ng-model="appSetup.value"></select>
 	</div>
 </div>
